202207102306: Updated Sleep flow output with work measure.
202207112325: Simplified and generalised Split JSON fiber.
202207112333: Set initial path for folder / file picking in Split JSON fiber 
202207212213: Allow silent updates.
202208031426: Updated initialization flow.
202208032339: Adjustments to flows (repeat work).
202208040008: Renumbered flows.
202208041756: Fixed the Exercise Daily Update flow.
202208042305: Fixed Sleep Daily Update.
202208122324: Added a Daily Health Update flow.
202208132332: Possible fix for Sleep summary awake time issues.
202208141551: Fixed combine JSONs flow.
202208141640: Changed avgSleptTime to median and not mean.
202208182011: Fixed some hidden initialisation issues.
202210021530: Added a generic summary function!
202210031440: Fixed summary issues.
202210032308: Created generic period summary flow.
202210041943: Added avg measure for period summaries.
202210121844: Added edit JSON flow.
202210240915: Removed unique sleep update flow.
202210292236: Updating readme.
202211011020: Fixed read file error at 442.
202211011055: Change hardcoded length to #payload["file"].
202211230027: Disabled period summaries until it can be optimised.
202303231612: Fixed bug in configuration
202303231630: Moved flow copy to be included in git commit
202303240027: Refactored tools for EOD jobs
202303242141: Testing EOD processes
202303242309: Fixed hectic delete bug
202303252333: Reafcatored tools flow and moved some subflows
202303260147: Refactored missing sessions subflow
202303261435: Testing the period summary subflow
202303261447: Testing period summary subflow. Making periodSummary null at the end
202303261554: Testing summary subflow with arrays to produce averages
202303261617: Fixed summary averages bug with summaries. Branch done
202303280005: Fixed multiple git commit error(?)
202303280012: Fixing multiple commit bug
202303280019: Final fix for multiple commit bug