@@ -2,5 +2,10 @@
         "processFolder": "/storage/emulated/0/Process/automate/",
         "dataFolder": "/storage/emulated/0/Data/",
         "mapboxAPIKey": "pk.eyJ1IjoiZy04IiwiYSI6ImNsN29ubHhnNTA3NjUzcG10emd6OXJ3cHcifQ.qqVFQrIOUI5kX9H4hNJxuA",
-        "exchangerateAPIKey": "248818aaeb4f8f3f1272dfb2"
+        "exchangerateAPIKey": "248818aaeb4f8f3f1272dfb2",
+        "exercise": {
+                "defaultLat": 52.50457,
+                "defaultLong": 13.33684,
+                "defaultLocation": "Tauentzenstraße 9, 10789, Berlin"
+        }
 }
